--- a/style.css
+++ b/style.css
@@ -300,6 +300,126 @@ a {
   color: #ff7c2d;
 }
 
+.box1-hd {
+  padding: 20px 0;
+  height: 20px;
+}
+
+.box1-title {
+  float: left;
+  font-size: 20px;
+  color: #494949;
+}
+
+.box1-nav {
+  float: left;
+  margin-left: 280px;
+}
+
+.box1-nav ul li {
+  float: left;
+  margin-left: 70px;
+}
+
+.box1-nav ul li a {
+  font-size: 16px;
+  color: #868686;
+}
+
+.box1-nav ul li a:hover {
+  color: #00a4ff;
+}
+
+.box1-more {
+  float: right;
+  margin-right: 30px;
+  font-size: 12px;
+  color: #a5a5a5;
+}
+
+.box1-bd {
+  margin-bottom: 25px;
+  height: 390px;
+}
+
+.router {
+  float: left;
+  margin-right: 15px;
+}
+
+.router img {
+  height: 390px;
+  width: 230px;
+}
+
+.content {
+  float: left;
+  height: 390px;
+  width: 955px;
+}
+
+.box1-banner img {
+  width: 955px;
+  height: 100px;
+  margin-bottom: 17px;
+}
+
+.box1-bd ul {
+  width: 972px;
+}
+
+.box1-bd ul li {
+  float: left;
+  width: 228px;
+  height: 270px;
+  margin-right: 14px;
+  background-color: #fff;
+}
+
+.box1-bd ul li img {
+  width: 100%;
+  height: 155px;
+}
+
+.box1-bd ul li h4 {
+  margin: 20px 20px 20px 25px;
+  font-size: 14px;
+  color: #050505;
+  font-weight: 400;
+}
+
+.box2-nav {
+  margin-left: 240px;
+}
+
+.box2-bd {
+  margin-bottom: 20px;
+}
+
+.box2-bd ul {
+  width: 1225px;
+}
+
+.box2-bd ul li {
+  float: left;
+  width: 228px;
+  height: 270px;
+  margin-right: 14px;
+  background-color: #fff;
+}
+
+.box2-bd ul li img {
+  width: 100%;
+  height: 155px;
+}
+
+.box2-bd ul li h4 {
+  margin: 20px 20px 20px 25px;
+  font-size: 14px;
+  color: #050505;
+  font-weight: 400;
+}
+
 /* 尾部 */
 .footer {
   height: 415px;
